fix: CORS — use explicit origins with credentials for JWT auth